# ble-mcp

./: CLAUDE.md  README.md  pyproject.toml
src/ble_mcp/: __init__.py  __main__.py  connection.py  gatt_names.py  safety.py  server.py  tools.py
tests/: conftest.py  test_connection.py  test_gatt_names.py  test_safety.py  test_server_dispatch.py  test_tools.py
